--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
    <head>
        <title>Jenkins website creation</title>
-       <link href="index.css" rel="stylesheet>
+       <link href="index.css" rel="stylesheet">
    </head>
    <body>
 		<h1> This is Jenkins pipeline project enabled website</h1>
