--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
    <head>
-       <title>Jenkins website creation</title>
-       <link href="index.css" rel="stylesheet">
+       <title>Jenkins website creation</title>       
    </head>
    <body>
 		<h1> This is Jenkins pipeline project enabled website</h1>
+        <h2> This is Jenkins pipeline project enabled website using Automatic way</h2>
+
    </body>
  </html>
